fix: style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@ body {
 button, input, select, table{
   font-family: 'Roboto', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 14px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(219, 219, 219);
+  border-radius: 10px;
+  border: 2px solid rgb(241, 241, 241);
+}
+::-webkit-scrollbar-track {
+  background: rgb(241, 241, 241);
+  border-radius: 10px;
+  border: 1px solid rgb(241, 241, 241);
+}
